--- a/src/components/TableUser.scss
+++ b/src/components/TableUser.scss
@@ -20,3 +20,10 @@
         }
     }
   }
+  .customize-table {
+    width: inherit;
+    overflow-x: auto;
+  }
+  .pagination {
+    justify-content: center;
+  }
